Updated styles the to fix that are broken on last update

--- a/styles.css
+++ b/styles.css
@@ -85,8 +85,9 @@ body{
     display: flex;
     align-content: center;
     justify-content: space-around;
-    height: 50px;
     flex-direction: column;
+    border-bottom: white solid 1px;
+    box-shadow: 1px 1px 1000px 1px;
 }
 
 /*TODO CSS animation*/
@@ -98,9 +99,9 @@ body{
 #navTop{
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
-    width: 100%;
     align-content: center;
+    justify-content: space-around;
+    height: 50px;
 }
 
 #storeMenu{
